# Car-Opportunity-Finder-FIPE-vs-Marketplace-

excel/: .dockerignore  .gitignore  dockerfile  main.py  pyproject.toml  scrapy.cfg
excel/excel/: data.json  items.py  middlewares.py  pipelines.py  settings.py
excel/excel/spiders/: excel_data.py
excel/excel/utils/: analisar_excel.py  email_sender.py  fipe.py  normalizador.py  open_ia.py
